Fix Sonar vulnerability in ImportWizardController